--- a/health_contact.html
+++ b/health_contact.html
@@ -1,56 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Health Analysis Data</title>
+  <title>Contáctenos</title>
   <link rel="stylesheet" href="./health_analysis.css">
+  <style>
+    body{
+        text-align: center;
+    }
+    /* Algunos estilos básicos para fines de demostración */
+    #contactForm {
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    #contactForm input,
+    #contactForm textarea {
+      width: 100%;
+      margin-bottom: 15px;
+      padding: 8px;
+    }
+    #contactForm button {
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    #contactForm button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-   <nav><h1>Health Analysis Census</h1>
-<ul>
-  <li><a href="./index.html" id="home">Inicio </a></li>
-  <li><a href="./health_contact.html" id="contact">Contáctanos </a></li>
-  <li><input type="text" id="conditionInput" placeholder="Ingresa una condición de salud">  </li>
-  <li><button id='btnSearch'>Buscar</button>
-  </li>
+  <nav><h1>Censo de Análisis de Salud</h1>
+    <ul>
+      <li><a href="./index.html" id="home">Inicio </a></li>
+      <li><a href="./health_contact.html" id="contact">Contáctenos </a></li>
+      </li>
 
-</ul>
-</nav>
-<div class="container">
-<div class="analysisForm">
-<h1>Análisis de Datos de Salud</h1>
-<div>
-<label for="name">Nombre:</label>
-<input type="text" id="name">
-</div>
-<div>
-<label>Género:</label>
-<label for="male">Masculino</label>
-<input type="radio" name="gender" id="male" value="Male">
-<label for="female">Femenino</label>
-<input type="radio" name="gender" id="female" value="Female">
-</div>
-<div>
-<label for="age">Edad:</label>
-<input type="number" id="age">
-</div>
-<div>
-<label for="condition">Condición:</label>
-<select id="condition">
-  <option value="">Seleccionar condición</option>
-  <option value="Diabetes">Diabetes</option>
-  <option value="Tiroides">Tiroides</option>
-  <option value="Presión Arterial Alta">Presión Arterial Alta</option>
-</select>
-</div>
-<button id="addPatient">Agregar Paciente</button>
-<h2>Informe de Análisis</h2>
-<div id="report"></div>
-</div>
-<div class="searchCondition">
-    <div id="result"></div>
-</div>
-</div>
-<script src="./health_analysis.js"></script>
+    </ul>
+    </nav>
+  <h1>Contáctenos</h1>
+  <p>No dude en contactarnos para saber más sobre sus condiciones y métodos de tratamiento.</p>
+
+  <form id="contactForm">
+    <div>
+      <label for="name">Nombre</label>
+      <input type="text" id="name" name="name" required>
+    </div>
+    <div>
+      <label for="email">Correo electrónico</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div>
+      <label for="condition">Condición</label>
+      <input type="text" id="condition" name="condition" required>
+    </div>
+    <div>
+      <label for="message">Mensaje</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+    </div>
+    <button type="submit" onclick="thankyou()">Enviar</button>
+  </form>
+  <script>
+    function thankyou(){
+        alert('¡Gracias por contactarnos!')
+    }
+  </script>
 </body>
 </html>
